add action on today hearing

--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
@@ -53,7 +53,7 @@
                     @if (bt.NextDate != "01/01/0001")
                         @bt.NextDate
                 </td>
-                <td text-right">
+                <td class="text-right">
                     <div class="btn-group">
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Action
