--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_ViewAll.cshtml
@@ -69,10 +69,45 @@
                                             <input asp-for="@Model.CaseList[i].Selected" class="form-check-input" />
                                         </div>
                                     </td>
-                                    <td style="width:6%">
-                                        <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseHistory?CaseId=@Model.CaseList[i].Id', 'See History')" title="Case History"> <i class="fa fa-history"></i></a>
-                                        <a onclick="jQueryModalGet('/Litigation/hearing/CaseProceeding?CaseId=@Model.CaseList[i].Id', 'Case Proceeding')" title="Add Proceeding/work detail for the case"> <i class="fa fa-plus-square"></i></a>
+                                    <td class="text-right">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                Action
+                                            </button>
+                                            <div class="dropdown-menu shadow animated--grow-in">
+                                                <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseHistory?CaseId=@Model.CaseList[i].Id', 'See History')"
+                                                   class="dropdown-item" title="See History"><i class="fa fa-history"></i> Case  History</a>
+
+                                                <a class="dropdown-item" title="Click for case proceeding" onclick="jQueryModalGet('/Litigation/hearing/CaseProceeding?CaseId=@Model.CaseList[i].Id', 'Case Proceeding')"> 
+                                                    <i class="fa fa-plus-square"></i> Case Proceeding</a>
+
+                                                <a onclick="jQueryModalGet('/Litigation/casemanage/GetFileUploadModel?CaseId=@Model.CaseList[i].Id&w=mc&reft=@Model.CaseList[i].Reference', 'Upload Document')"
+                                                   class="dropdown-item" title="Upload Document"><i class="fas fa-file-alt"></i>  Upload Document</a>
+
+                                                <a asp-area="Litigation" asp-controller="casemanage" asp-action="GetCaseDetail"
+                                                   asp-route-id="@Model.CaseList[i].Id" asp-route-reft="@Model.CaseList[i].Reference" class="dropdown-item" title="View Case Detail">
+                                                   <i class="fa fa-eye"></i>  Case Detail</a>
+
+                                                @if ((AuthorizationService.AuthorizeAsync(User, "CasePanel.ManageCase.Delete")).Result.Succeeded && @Model.CaseList[i].Reference.ToLower() != "assigned")
+                                                {
+                                                    <form id="form_delete_@Model.CaseList[i].Id" asp-area="Litigation"
+                                                          asp-controller="casemanage" method="post"
+                                                          asp-action="OnPostDelete" asp-route-id="@Model.CaseList[i].Id" onsubmit="return jQueryModalDelete(this)">
+                                                        <a href="javascript:$('#form_delete_@Model.CaseList[i].Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
+                                                    </form>
+                                                }
+                                                @if (@Model.CaseList[i].Reference.ToLower() == "self")
+                                                {
+                                                    <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetAssignCase?CaseId=@Model.CaseList[i].Id', 'Assigned case to other lawyer')"
+                                                       class="dropdown-item" title="Assigned case to other lawyer"><i class="fa fa-tasks" aria-hidden="true"></i> Assigned Case</a>
+                                                }
+                                            </div>
+                                        </div>
                                     </td>
+                                    @*  <td style="width:6%">
+                                        <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseHistory?CaseId=@Model.CaseList[i].Id', 'See History')" title="Case History"> <i class="fa fa-history"></i></a>
+                                        <a onclick="jQueryModalGet('/Litigation/hearing/CaseProceeding?CaseId=@Model.CaseList[i].Id', 'Case Proceeding')" title="Add Proceeding/work detail for the case"> <i class="fa fa-plus-square"></i></a> 
+                                    </td> *@
                                 </tr>
                             }
                         </tbody>
@@ -102,7 +137,7 @@
                     },
                     {
                         text: 'Update Common Proceeding',
-                        action: function (e, dt, node, config) {                           
+                        action: function (e, dt, node, config) {
                                 var selectedCaseIds = [];
                                 // Find all checked checkboxes in the table and collect their associated CaseId
                                 $("#tblTHearingCaseDetail tbody input[type='checkbox']:checked").each(function () {
