--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
@@ -50,7 +50,7 @@
                 </td>
 
                 <td>
-                    @if (bt.NextDate != "01/01/0001")
+                    @if (bt.NextDate != "01-01-0001")
                         @bt.NextDate
                 </td>
                 <td class="text-right">
