Pending, Disposal & All along with deassigned and some bug fixes.

--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/Index - Copy.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/Index - Copy.cshtml
@@ -4,23 +4,28 @@
 }
 @model BringTodayCaseViewModel
 <div class="card">
-    <div class="col-sm-12" style="padding:20px">
+    @* <div class="col-sm-12" style="padding:20px">
         <div class="form-group row">
-            @* <div class="col-sm-3">
+            <div class="col-sm-3">
                 <a id="btnBirngToday" onclick="jQueryModalGet('/Litigation/hearing/GetCaseHearing','Bring Today')" class="btn bg-success">
                     <i class="fa fa-calendar"></i> Bring Today
                 </a>
-            </div>  *@
+            </div>
             <div class="col-sm-3">
                 <input type="date" id="SelData" asp-for="@Model.HearingDate" class="form-control" />
             </div>
         </div>
+    </div> *@
+    <div class="col-sm-3">
+        <input type="date" id="SelData" asp-for="@Model.HearingDate" class="form-control" />
     </div>
     <div id="viewAll" class="card-body table-responsive">
     </div>
 </div>
+
 @section Scripts
-{    
+{
+    
     <script>
         $(document).ready(function () {
 
