--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_ViewAll.cshtml
@@ -1,13 +1,12 @@
 ﻿@model BringTodayCaseViewModel
-
 <div class="card">
     <div id="viewAll" class="card-body table-responsive">
-        <form asp-controller="Hearing" method="post" asp-action="AssignWorkCase"
-              class="d-inline" return=jQueryModalGet(this)>
+        <form asp-controller="Hearing" method="post" asp-action="AssignWorkCase" class="d-inline">
             <div class="row">
                 <div class="col-md-12">
-                    <table id="tblTHearingCaseDetail" class="table table-striped"
-                           width="100%" cellspacing="0">
+                    <div class="mb-3" id="customTableActions">
+                    </div>
+                    <table id="tblTHearingCaseDetail" class="table table-striped" width="100%" cellspacing="0">
                         <thead>
                             <tr>
                                 <th>Sno.</th>
@@ -70,44 +69,14 @@
                                         </div>
                                     </td>
                                     <td class="text-right">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                Action
-                                            </button>
-                                            <div class="dropdown-menu shadow animated--grow-in">
-                                                <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseHistory?CaseId=@Model.CaseList[i].Id', 'See History')"
-                                                   class="dropdown-item" title="See History"><i class="fa fa-history"></i> Case  History</a>
-
-                                                <a class="dropdown-item" title="Click for case proceeding" onclick="jQueryModalGet('/Litigation/hearing/CaseProceeding?CaseId=@Model.CaseList[i].Id', 'Case Proceeding')"> 
-                                                    <i class="fa fa-plus-square"></i> Case Proceeding</a>
-
-                                                <a onclick="jQueryModalGet('/Litigation/casemanage/GetFileUploadModel?CaseId=@Model.CaseList[i].Id&w=mc&reft=@Model.CaseList[i].Reference', 'Upload Document')"
-                                                   class="dropdown-item" title="Upload Document"><i class="fas fa-file-alt"></i>  Upload Document</a>
-
-                                                <a asp-area="Litigation" asp-controller="casemanage" asp-action="GetCaseDetail"
-                                                   asp-route-id="@Model.CaseList[i].Id" asp-route-reft="@Model.CaseList[i].Reference" class="dropdown-item" title="View Case Detail">
-                                                   <i class="fa fa-eye"></i>  Case Detail</a>
-
-                                                @if ((AuthorizationService.AuthorizeAsync(User, "CasePanel.ManageCase.Delete")).Result.Succeeded && @Model.CaseList[i].Reference.ToLower() != "assigned")
-                                                {
-                                                    <form id="form_delete_@Model.CaseList[i].Id" asp-area="Litigation"
-                                                          asp-controller="casemanage" method="post"
-                                                          asp-action="OnPostDelete" asp-route-id="@Model.CaseList[i].Id" onsubmit="return jQueryModalDelete(this)">
-                                                        <a href="javascript:$('#form_delete_@Model.CaseList[i].Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
-                                                    </form>
-                                                }
-                                                @if (@Model.CaseList[i].Reference.ToLower() == "self")
-                                                {
-                                                    <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetAssignCase?CaseId=@Model.CaseList[i].Id', 'Assigned case to other lawyer')"
-                                                       class="dropdown-item" title="Assigned case to other lawyer"><i class="fa fa-tasks" aria-hidden="true"></i> Assigned Case</a>
-                                                }
-                                            </div>
-                                        </div>
+                                        @{
+                                            var actionModel = new CaseActionViewModel();
+                                            actionModel.CaseId = @Model.CaseList[i].Id;
+                                            actionModel.Reference = @Model.CaseList[i].Reference;
+                                            actionModel.IsCaseAssigned = @Model.CaseList[i].IsCaseAssigned;
+                                        }
+                                        <partial name="_CaseGroupActionPartial" model="@actionModel" ></partial>
                                     </td>
-                                    @*  <td style="width:6%">
-                                        <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseHistory?CaseId=@Model.CaseList[i].Id', 'See History')" title="Case History"> <i class="fa fa-history"></i></a>
-                                        <a onclick="jQueryModalGet('/Litigation/hearing/CaseProceeding?CaseId=@Model.CaseList[i].Id', 'Case Proceeding')" title="Add Proceeding/work detail for the case"> <i class="fa fa-plus-square"></i></a> 
-                                    </td> *@
                                 </tr>
                             }
                         </tbody>
@@ -117,49 +86,4 @@
         </form>
     </div>
 </div>
-<script>
-    $(document).ready(function () {
-        $('#tblTHearingCaseDetail').DataTable({
-            language: {"emptyTable": "There are no pending works!"},
-            dom: 'Bfrtip',// B (buttons), f (filter), t (table), p (pagination)
-            buttons:[
-                    {
-                        extend: 'excelHtml5',
-                        text: 'Export',
-                        title: 'Today Case Hearing',
-                        filename: function () {
-                            var date = new Date();
-                            return 'Today Case Hearing' +"_"+ date.toISOString().split('T')[0];
-                        },
-                        exportOptions: {
-                            columns: [0,1,2,3,4,5,6]
-                        }
-                    },
-                    {
-                        text: 'Update Common Proceeding',
-                        action: function (e, dt, node, config) {
-                                var selectedCaseIds = [];
-                                // Find all checked checkboxes in the table and collect their associated CaseId
-                                $("#tblTHearingCaseDetail tbody input[type='checkbox']:checked").each(function () {
-                                        var caseId = $(this).closest("tr").find("input[type='hidden']").val();
-                                        if (caseId) {
-                                        selectedCaseIds.push(caseId);
-                                        }
-                                });
-
-                                if (selectedCaseIds.length === 0) {
-                                    Swal.fire("Error!", "Please select at least one case.", "error");
-                                    return;
-                                }
-
-                                // Convert selectedCaseIds array to a comma-separated string
-                                var caseIdsString = selectedCaseIds.join(',');
-
-                                // Call modal with the selected CaseIds
-                                    jQueryModalGet('/Litigation/hearing/BulkProceeding?CaseIds=' + caseIdsString, 'Case Proceedings');
-
-                                }
-                    }]
-            });
-    });
-</script>
+<script src="~/js/Litigation/BringToday.js"></script>
