--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_AssignCase.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_AssignCase.cshtml
@@ -1,37 +1,52 @@
 ﻿@model AssignCaseViewModel
 <form id="CaseAssignModelPopup" method="post" asp-controller="CaseManage" asp-route-id="@Model.Id"
-      asp-action="OnPostAssignCase" onsubmit="return jQueryModalPost(this);"
-      enctype="multipart/form-data">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="form-group row">
-                <input type="hidden" asp-for="@Model.CaseId" value="@Model.CaseId"></input>
-                <label class="col-md-3 col-form-label">@localizer["Lawyer"]</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <select class="form-control select2bs4" asp-for="LawyerId" asp-items="@Model.Lawyers">
-                            <option></option>
-                        </select>
-                    </div>
-                    <span asp-validation-for="LawyerId" class="text-danger"></span>
-                </div>
-            </div>
-        </div>
-    </div>
+	  asp-action="OnPostAssignCase" onsubmit="return jQueryModalPost(this);"
+	  enctype="multipart/form-data">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="form-group row">
+				
+				<input type="hidden" asp-for="@Model.IsAssignAction" value="@Model.IsAssignAction" />
+				@if (Model.IsAssignAction)
+				{
+					<label class="col-md-3 col-form-label">@localizer["Lawyer"]</label>
+					<div class="col-md-9">
+						<div class="input-group">
+							<select class="form-control select2bs4" asp-for="LawyerId" asp-items="@Model.Lawyers">
+								<option></option>
+							</select>
+						</div>
+						<span asp-validation-for="LawyerId" class="text-danger"></span>
+					</div>
+				}
+				else
+				{
+					<input type="hidden" asp-for="@Model.LawyerId" value="@Model.LawyerId" />
+					<label class="col-md-12 col-form-label">@localizer[Model.LawyerInfo]</label>
+				}
+				@* <label class="col-md-3 col-form-label">@localizer["Remark"]</label>
+				<div class="col-md-9">
+					<input type="text" placeholder="Remark" asp-for="Remark" />
+				</div> *@
 
-    <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
-        <button type="submit" class="btn btn-success">Save</button>
-        <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
-    </div>
+			</div>
+		</div>
+	</div>
+
+	<div class="form-group justify-content-between" style="margin-bottom: 0px !important">
+		<button type="submit" class="btn btn-success">Save</button>
+		<button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
+	</div>
 </form>
-<script type="text/javascript" language=javascript>
-    $(document).ready(function () {
-        $("#LawyerId").select2({
-            placeholder: "Select a assinee",
-            theme: "bootstrap4",
-            escapeMarkup: function (m) {
-                return m;
-            }
-        });
-    });
+<script src="~/js/site.js"></script>
+<script type="text/javascript">
+	$(document).ready(function () {
+		$("#LawyerId").select2({
+			placeholder: "Select an assignee",
+			theme: "bootstrap4",
+			escapeMarkup: function (markup) {
+				return markup;
+			}
+		});
+	});
 </script>
