--- a/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/_ShowCauseNoticeWrit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/_ShowCauseNoticeWrit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FmpShowCauseViewModel
 @foreach (var d in Model.ShowCauses)
 {
-    <div style="width:800px; padding-left:100px;page-break-after: always;">
+    <div style="page-break-after: always;" class="a4-size">
         <center>
             <h1>    Notice to Show Cause</h1>
             [ Appendix H Form 4 ]<br />
