--- a/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/Index.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/Index.cshtml
@@ -2,10 +2,52 @@
     ViewData["Title"] = localizer["Generate Case Forms"];
 }
 <style>
+    @@media print {
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .a4-size {
+            width: 210mm;
+            height: 297mm;
+            padding: 20mm 15mm 20mm 15mm; /* Top, Right, Bottom, Left */
+            box-sizing: border-box;
+            page-break-after: always;
+        }
+
+        * {
+            -webkit-print-color-adjust: exact !important;
+            print-color-adjust: exact !important;
+        }
+    }
+
+    .a4-size {
+        width: 210mm;
+        height: 297mm;
+        padding: 20mm 15mm 20mm 15mm;
+        box-sizing: border-box;
+        margin: auto;
+        page-break-after: always;
+        background: white;
+    }
+
+    td {
+        word-wrap: break-word;
+        vertical-align: top;
+    }
+
+    table {
+        width: 100%;
+        table-layout: fixed;
+    }
+</style>
+@* <style>
     /* Force each form to start on a new page */
     .form-section {
         page-break-after: always;
     }
+
     .card {
         width: 100%;
     }
@@ -25,8 +67,8 @@
     }
 
     /* .select2-container {
-                                            min-width: 400px;
-                                        } */
+                                                min-width: 400px;
+                                            } */
 
     .select2-results__option {
         padding-right: 20px;
@@ -117,61 +159,59 @@
         text-align: center;
     }
 
-    
-</style>
+</style> *@
 @model FmpViewModel
-<section class="bg-light pt-5 pb-5 shadow-sm">
-    <div class="container">
-        <!-- Filter Section -->
-        <div class="row mb-3">
-            <div class="col-lg-3">
-                <label class="global-font">Select Cases (<span style="color:red">*</span>)</label>
-                <select class="form-control select2bs4" asp-for="@Model.CaseIds"
-                        asp-items="@Model.Cases" multiple>
-                    <option></option>
-                </select>
-            </div>
-            <div class="col-lg-3">
-                <label class="global-font">Select Title</label>
-                <select class="form-control select2bs4" asp-for="@Model.TitleIds" asp-items="@Model.Titles">
-                    <option></option>
-                </select>
-            </div>
-            <div class="col-lg-3">
-                <label class="global-font">Select Form Type (<span style="color:red">*</span>)</label>
-                <select class="form-control select2bs4" asp-for="@Model.FormTypeId" asp-items="@Model.FormTypes">
-                    <option></option>
-                </select>
-            </div>
 
-
-            <div class="col-lg-3 d-flex align-items-end">
-                <a id="btnSearch" class="btn bg-success mr-2">
-                    <i class="fa fa-search"></i> Generate
-                </a>
-                <a id="reload" class="btn btn-primary text-white">
-                    <i class="fa fas fa-reset"></i> Reset
-                </a>
-            </div>
+<div class="container">
+    <!-- Filter Section -->
+    <div class="row mb-3">
+        <div class="col-lg-3">
+            <label class="global-font">Select Cases (<span style="color:red">*</span>)</label>
+            <select class="form-control select2bs4" asp-for="@Model.CaseIds" asp-items="@Model.Cases">
+                <option></option>
+            </select>
+        </div>
+        <div class="col-lg-3">
+            <label class="global-font">Select Title</label>
+            <select class="form-control select2bs4" asp-for="@Model.TitleIds" asp-items="@Model.Titles">
+                <option></option>
+            </select>
+        </div>
+        <div class="col-lg-3">
+            <label class="global-font">Select Form Type (<span style="color:red">*</span>)</label>
+            <select class="form-control select2bs4" asp-for="@Model.FormTypeId" asp-items="@Model.FormTypes">
+                <option></option>
+            </select>
         </div>
 
-        <!-- Output Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-header d-flex justify-content-between align-items-center">
-                        <h3 class="mb-0" id="lblHeader"></h3>
-                        <a href="#" id="btnPrint" class="btn btn-primary">Print</a>
-                    </div>
 
-                    <div class="card-body">
-                        <div id="viewAll" class="table-responsive"></div>
-                    </div>
+        <div class="col-lg-3 d-flex align-items-end">
+            <a id="btnSearch" class="btn bg-success mr-2">
+                <i class="fa fa-search"></i> Generate
+            </a>
+            <a id="reload" class="btn btn-primary text-white">
+                <i class="fa fas fa-reset"></i> Reset
+            </a>
+        </div>
+    </div>
+
+    <!-- Output Section -->
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h3 class="mb-0" id="lblHeader"></h3>
+                    <a href="#" id="btnPrint" class="btn btn-primary">Print</a>
+                </div>
+
+                <div class="card-body">
+                    <div id="viewAll" class="table-responsive"></div>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</div>
+
 @section Scripts
 {
     <script src="~/js/formprint.js"></script>
