--- a/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/_AdmissionWrit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/_AdmissionWrit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model FmpNoticeAdmissionViewModel
-<style>
+@* <style>
     .a4-size {
         width: 210mm;
         height: 297mm;
@@ -10,11 +10,11 @@
         height: 10px;
         border: 1px;
     }
-</style>
+</style> *@
 <div id="printableArea">
     @foreach (var cd in Model.Cases)
     {
-        <div style="width:800px; line-height:40px;page-break-after: always; padding-left:50px">
+        <div style="page-break-after: always;" class="a4-size">
             <center>
                 <span style="font-weight:bold;font-size:28px">   In the High Court of Judicature for </span><br />
                 Rajasthan at-Jaipur<br />
