--- a/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/_InspectionForm.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/_InspectionForm.cshtml
@@ -1,14 +1,51 @@
 ﻿@model FmpInspectionFormViewModel
-<style>
+@* <style>
+    @@media print {
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .a4-size {
+            width: 210mm;
+            height: 297mm;
+            padding: 20mm 15mm 20mm 15mm; /* Top, Right, Bottom, Left */
+            box-sizing: border-box;
+            page-break-after: always;
+        }
+
+        * {
+            -webkit-print-color-adjust: exact !important;
+            print-color-adjust: exact !important;
+        }
+    }
+
     .a4-size {
         width: 210mm;
         height: 297mm;
+        padding: 20mm 15mm 20mm 15mm;
+        box-sizing: border-box;
+        margin: auto;
+        page-break-after: always;
+        background: white;
     }
-</style>
+
+    td {
+        word-wrap: break-word;
+        vertical-align: top;
+    }
+
+    table {
+        width: 100%;
+        table-layout: fixed;
+    }
+</style> *@
+
+
 <div id="printableArea">
     @foreach (var cd in Model.Cases)
     {
-        <div style="width:800px; padding-left:100px;page-break-after: always;" class="a4-size">
+        <div style="page-break-after: always;" class="a4-size">
             <center><span style="font-size:26px;"><strong>FORM NO.-11</strong></span> </center><br />
             <center><span style="font-size:20px;">APPLICATION FOR INSPECTION OF RECOED</span></center>
             <div style="width:100%;line-height:1.75; font-size:16px; text-align:justify">
