--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
@@ -73,6 +73,7 @@
 </table>
 <script>
 	$(document).ready(function () {
-		JqueryDataTable('tblUserCase','User Data List','0,1,2,3,4,5,6,7');
+		$("#tblUserCase").DataTable();
+		//JqueryDataTable('tblUserCase','User Data List','0,1,2,3,4,5,6,7');
 	});
 </script>
