--- a/CourtApp.Web/Areas/Admin/Views/TemplateBuilder/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/TemplateBuilder/_ViewAll.cshtml
@@ -29,15 +29,15 @@
                         <i class="fa fa-file-pdf" aria-hidden="true"></i>
                     </a>
                 </td> *@
-                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.TempDesign.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.TempDesign.Edit)).Result.Succeeded)
-                {
+               @*  @if ((AuthorizationService.AuthorizeAsync(User, Permissions.TempDesign.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.TempDesign.Edit)).Result.Succeeded)
+                { *@
                     <td>
                         <a asp-area="admin" asp-controller="TemplateBuilder" title="Edit the template" asp-action="OnGetCreateOrEdit" asp-route-id="@bt.Id">
                             <i class="fa fa-pencil-square-o"></i>
                         </a>
                         <a title="Map the template dynamic fields" onclick="jQueryModalGet('/Admin/TemplateBuilder/MapFields?id=@bt.Id','Map Form With Template Tags')"><i class="fa fa-map-o"></i></a>                       
                     </td>
-                }
+               @*  } *@
             </tr>
         }
     </tbody>
