--- a/CourtApp.Web/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/CourtApp.Web/Views/Shared/Components/Sidebar/Default.cshtml
@@ -154,6 +154,12 @@
                                     <p>@localizer["Cadre Master"]</p>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a is-active-route asp-area="LawyerDiary" asp-controller="courtform" asp-action="index" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>@localizer["Court forms"]</p>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                 }
