--- a/CourtApp.Web/Areas/Admin/Views/GenerateForm/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/GenerateForm/_ViewAll.cshtml
@@ -1,62 +1,59 @@
 ﻿@model IEnumerable<GenFormAttrViewModel>
 <table id="tblFormData" class="table table-striped" width="100%" cellspacing="0">
-    <thead>
-        <tr>
-            <th style="width:5%;">Sr.</th>
-            <th style="width:20%;">Form Name</th>
-            <th style="width:70%;">Fields</th>
-            @if ((AuthorizationService.AuthorizeAsync(User, Permissions.FormBuilder.Delete)).Result.Succeeded
-            || (AuthorizationService.AuthorizeAsync(User, Permissions.FormBuilder.Edit)).Result.Succeeded)
-            {
-                <th style="width:5%;">Actions</th>
-            }
-        </tr>
-    </thead>
-    <tbody>
-        @{
-            int count = 0;
-        }
-        @foreach (var bt in Model)
-        {
-            <tr>
-                <td>
-                    @(++count)
-                </td>
-                <td>
-                    @bt.FormName
-                </td>
-                <td>
-                    @bt.Fields
-                </td>
+	<thead>
+		<tr>
+			<th style="width:5%;">Sr.</th>
+			<th style="width:20%;">Form Name</th>
+			<th style="width:70%;">Fields</th>
+			<th style="width:5%;">Actions</th>
 
-                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.FormBuilder.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.FormBuilder.Edit)).Result.Succeeded)
-                {
-                    <td text-right">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Action
-                            </button>
-                            <div class="dropdown-menu shadow animated--grow-in">
-                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.FormBuilder.Edit)).Result.Succeeded)
-                                {
-                                    <a onclick="jQueryModalGet('/admin/generateform/OnGetCreateOrEdit?id=@bt.Id','Edit Book Master')" class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
-                                }
-                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.FormBuilder.Delete)).Result.Succeeded)
-                                {
-                                    <form id="form_delete_@bt.Id" asp-area="admin" asp-controller="generateform" method="post" asp-action="OnPostDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
-                                        <a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
-                                    </form>
-                                }
-                            </div>
-                        </div>
-                    </td>
-                }
-            </tr>
-        }
-    </tbody>
+		</tr>
+	</thead>
+	<tbody>
+		@{
+			int count = 0;
+		}
+		@foreach (var bt in Model)
+		{
+			<tr>
+				<td>
+					@(++count)
+				</td>
+				<td>
+					@bt.FormName
+				</td>
+				<td>
+					@bt.Fields
+				</td>
+
+				@* @if ((AuthorizationService.AuthorizeAsync(User, Permissions.FormBuilder.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.FormBuilder.Edit)).Result.Succeeded)
+				{ *@
+					<td text-right">
+						<div class="btn-group">
+							<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Action
+							</button>
+							<div class="dropdown-menu shadow animated--grow-in">
+								@* @if ((AuthorizationService.AuthorizeAsync(User, Permissions.FormBuilder.Edit)).Result.Succeeded)
+								{ *@
+									<a onclick="jQueryModalGet('/admin/generateform/OnGetCreateOrEdit?id=@bt.Id','Edit Book Master')" class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
+								@* }
+								@if ((AuthorizationService.AuthorizeAsync(User, Permissions.FormBuilder.Delete)).Result.Succeeded)
+								{ *@
+									<form id="form_delete_@bt.Id" asp-area="admin" asp-controller="generateform" method="post" asp-action="OnPostDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
+										<a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
+									</form>
+								@* } *@
+							</div>
+						</div>
+					</td>
+				@* } *@
+			</tr>
+		}
+	</tbody>
 </table>
 <script>
-    $(document).ready(function () {
-        $("#tblFormData").DataTable();
-    });
+	$(document).ready(function () {
+		$("#tblFormData").DataTable();
+	});
 </script>
