--- a/CourtApp.Web/Areas/_ViewImports.cshtml
+++ b/CourtApp.Web/Areas/_ViewImports.cshtml
@@ -8,6 +8,7 @@
 @using CourtApp.Web.Areas.LawyerDiary.Models
 @using CourtApp.Web.Areas.LawyerDiary.Models.Title
 @using CourtApp.Web.Areas.LawyerDiary.Models.Lawyer
+@using CourtApp.Web.Areas.LawyerDiary.Models.CourtForm
 @using CourtApp.Web.Areas.Litigation.Models
 @using CourtApp.Web.Areas.Client.Model
 @using CourtApp.Web.Areas.Report.Models
