--- a/CourtApp.Web/Areas/Admin/Views/User/_Create.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/User/_Create.cshtml
@@ -83,11 +83,11 @@
             </div>
 
             <div class="form-group row">
-                <label class="col-md-2 col-form-label">@localizer["Joining Date"] (<span style="color:red">*</span>)</label>
+               @*  <label class="col-md-2 col-form-label">@localizer["Joining Date"] (<span style="color:red">*</span>)</label>
                 <div class="col-md-4">
                     <input type="date" asp-for="DateOfJoining" class="form-control">
                     <span asp-validation-for="DateOfJoining" class="text-danger"></span>
-                </div>
+                </div> *@
                 <label class="col-md-2 col-form-label">@localizer["Profile Picture"] </label>
                 <div class="col-md-4">
                     <div class="input-group ">
