--- a/CourtApp.Web/Areas/Admin/Views/User/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/User/_ViewAll.cshtml
@@ -33,10 +33,14 @@
 							<td>@bt.Role</td>
 							<td>
 								<div class="row">
-									@if (@bt.ProfileImgPath != null && bt.ProfileImgPath != "")
+                                    @if (@bt.ProfilePicture != null)
 									{
 										<div class="col-sm" style=" max-width: 80px;margin-right: 20px;">
-											<img class="img-profile rounded-circle" style="height: 75px;width:75px;object-fit: cover;" src="@bt.ProfileImgPath" alt="Profile Image">
+                                            <img class="img-profile rounded-circle"
+                                                 style="object-fit: cover; width: 30px; height: 30px;"
+                                                 src="data:image/*;base64,@(Convert.ToBase64String(bt.ProfilePicture))" alt="Profile Image">
+											@* <img class="img-profile rounded-circle" style="height: 75px;width:75px;object-fit: cover;" 
+                                            src="@bt.ProfilePicture" alt="Profile Image"> *@
 
 										</div>
 									}
