--- a/CourtApp.Web/Views/_ViewImports.cshtml
+++ b/CourtApp.Web/Views/_ViewImports.cshtml
@@ -10,4 +10,5 @@
 @using CourtApp.Web.Permission
 @inject IAuthorizationService AuthorizationService
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AspNetCoreHero.ToastNotification
 @addTagHelper *, CourtApp.Web
