--- a/CourtApp.Web/Areas/Admin/Views/User/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/User/_ViewAll.cshtml
@@ -1,83 +1,83 @@
 ﻿@using CourtApp.Web.Areas.Admin.Models
 @model IEnumerable<UserViewModel>
 <div class="card shadow">
-	<div class="card-header py-3 d-flex justify-content-between align-items-center">
-		@* <h6 class="m-0 font-weight-bold text-primary">@localizer["User master list"]</h6> *@
-		<div>
-			<button type="button" class="btn btn-secondary btn-sm mr-2" onclick="location.reload();">
-				<i class="fas fa-sync-alt"></i> @localizer["Reload"]
-			</button>
-			<a onclick="jQueryModalGet('/admin/user/OnGetCreate','Create User')" class="btn btn-primary btn-sm">
-				<i class="fas fa-plus"></i> @localizer["Add New"]
-			</a>
-		</div>
-	</div>
-	<div class="card-body">
-		<div class="table-responsive">
-			<table id="tblCourtForm" class="table table-striped table-bordered" width="100%" cellspacing="0">
-				<thead class="thead-light">
-					<tr>
-						<th>@localizer["Sr."]</th>
-						<th>@localizer["Type"]</th>
-						<th>@localizer["User"]</th>
-						<th>@localizer["Email"]</th>
-						<th>@localizer["Status"]</th>
-						<th>@localizer["Actions"]</th>
-					</tr>
-				</thead>
-				<tbody>
-					@foreach (var (bt, index) in Model.Select((value, i) => (value, i)))
-					{
-						<tr>
-							<td>@(index + 1)</td>
-							<td>@bt.Role</td>
-							<td>
-								<div class="row">
+    <div class="card-header py-3 d-flex justify-content-between align-items-center">
+        @* <h6 class="m-0 font-weight-bold text-primary">@localizer["User master list"]</h6> *@
+        <div>
+            <button type="button" class="btn btn-secondary btn-sm mr-2" onclick="location.reload();">
+                <i class="fas fa-sync-alt"></i> @localizer["Reload"]
+            </button>
+            <a onclick="jQueryModalGet('/admin/user/OnGetCreate','Create User')" class="btn btn-primary btn-sm">
+                <i class="fas fa-plus"></i> @localizer["Add New"]
+            </a>
+        </div>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table id="tblCourtForm" class="table table-striped table-bordered" width="100%" cellspacing="0">
+                <thead class="thead-light">
+                    <tr>
+                        <th>@localizer["Sr."]</th>
+                        <th>@localizer["Type"]</th>
+                        <th>@localizer["User"]</th>
+                        <th>@localizer["Email"]</th>
+                        <th>@localizer["Status"]</th>
+                        <th>@localizer["Actions"]</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var (bt, index) in Model.Select((value, i) => (value, i)))
+                    {
+                        <tr>
+                            <td>@(index + 1)</td>
+                            <td>@bt.Role</td>
+                            <td>
+                                <div class="row">
                                     @if (@bt.ProfilePicture != null)
-									{
-										<div class="col-sm" style=" max-width: 80px;margin-right: 20px;">
+                                    {
+                                        <div class="col-sm" style=" max-width: 80px;margin-right: 20px;">
                                             <img class="img-profile rounded-circle"
                                                  style="object-fit: cover; width: 30px; height: 30px;"
                                                  src="data:image/*;base64,@(Convert.ToBase64String(bt.ProfilePicture))" alt="Profile Image">
-											@* <img class="img-profile rounded-circle" style="height: 75px;width:75px;object-fit: cover;" 
+                                            @* <img class="img-profile rounded-circle" style="height: 75px;width:75px;object-fit: cover;" 
                                             src="@bt.ProfilePicture" alt="Profile Image"> *@
 
-										</div>
-									}
-									else
+                                        </div>
+                                    }
+                                    else
 
-									{
-										<div class="col-sm" style="max-width:80px; margin-right: 20px;">
-											<img class="img-profile rounded-circle" style="height: 75px;width:75px;object-fit: cover;" src="~/images/default-user.png">
-										</div>
-									}
-									<div class="col-sm">
-										<a>
-											@bt.FirstName @bt.LastName
-										</a>
-										<br>
-										<small>
-											@bt.Id
-										</small>
-									</div>
-								</div>
-							</td>
-							<td>
-								<a>
-									@bt.Email
-								</a>
-								<br>
-								<small>
-									@if (bt.EmailConfirmed)
-									{
-										<span class="badge badge-success">@localizer["Email Confirmed"]</span>
-									}
-									else
-									{
-										<span class="badge badge-danger">@localizer["Email Not Confirmed"]</span>
-									}
-								</small>
-							</td>
+                                    {
+                                        <div class="col-sm" style="max-width:80px; margin-right: 20px;">
+                                            <img class="img-profile rounded-circle" style="height: 75px;width:75px;object-fit: cover;" src="~/images/default-user.png">
+                                        </div>
+                                    }
+                                    <div class="col-sm">
+                                        <a>
+                                            @bt.FirstName @bt.LastName
+                                        </a>
+                                        <br>
+                                        <small>
+                                            @bt.Id
+                                        </small>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <a>
+                                    @bt.Email
+                                </a>
+                                <br>
+                                <small>
+                                    @if (bt.EmailConfirmed)
+                                    {
+                                        <span class="badge badge-success">@localizer["Email Confirmed"]</span>
+                                    }
+                                    else
+                                    {
+                                        <span class="badge badge-danger">@localizer["Email Not Confirmed"]</span>
+                                    }
+                                </small>
+                            </td>
                             <td>
                                 @if (bt.IsActive)
                                 {
@@ -88,15 +88,18 @@
                                     <span class="badge badge-danger">@localizer["Deactivated"]</span>
                                 }
                             </td>
-							<td class="text-right">
-								<div class="btn-group">
-									<button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-										@localizer["Action"]
-									</button>
-									<div class="dropdown-menu dropdown-menu-right shadow animated--grow-in">
-										<a style='margin-right:16px' asp-area="Identity" asp-page="/Profile" asp-route-userId="@bt.Id" class="dropdown-item">
-											<i class="fas fa-user"></i> @localizer["Profile"]
-										</a>
+                            <td class="text-right">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        @localizer["Action"]
+                                    </button>
+                                    <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in">
+                                        @if (bt.Role == "LAWYER")
+                                        {
+                                            <a style='margin-right:16px' asp-area="Identity" asp-page="/Profile" asp-route-userId="@bt.Id" class="dropdown-item">
+                                                <i class="fas fa-user"></i> @localizer["Profile"]
+                                            </a>
+                                        }
                                         <a onclick="jQueryModalGet('/Admin/User/OnGetCreate?id=@bt.Id','Edit Operator Detail')"
                                            class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
                                         @if (bt.IsActive)
@@ -119,15 +122,15 @@
                                                 <i class="fas fa-trash-alt"></i> Delete
                                             </a>
                                         </form>
-									</div>
-								</div>
-							</td>
-						</tr>
-					}
-				</tbody>
-			</table>
-		</div>
-	</div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 @* <table class="table table-striped" id="userTable">
@@ -254,7 +257,7 @@
     </tbody>
 </table> *@
 <script>
-	$(document).ready(function () {
-		$("#userTable").DataTable();
-	});
+    $(document).ready(function () {
+        $("#userTable").DataTable();
+    });
 </script>
